--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
     <string name="app_name">Content</string>
 
-    <string name="hf_save_content">hf_no_number|hf_show_text|hf_orientation:bottom|Save Content</string>
-    <string name="hf_sync_content">hf_no_number|hf_show_text|hf_orientation:bottom|Sync Content</string>
     <string name="action_open">Open…</string>
+    <string name="action_zoom_in">Zoom In</string>
+    <string name="action_zoom_out">Zoom Out</string>
+    <string name="action_invert_color">Invert</string>
+    <string name="action_freeze">Freeze</string>
 
     <!-- region Content List Fragment -->
     <string name="content_list_empty">No files found in directory %1$s</string>
